[workspace]
default-members = ["crates/crsh"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ndunnett/crsh"
repository = "https://github.com/ndunnett/crsh"

[workspace.dependencies]
crsh_core = { path = "crates/crsh_core" }
crsh_repl = { path = "crates/crsh_repl" }

clap = { version = "4.5.7", features = ["derive"] }
sysexits = "0.8.0"

[profile.dev]
codegen-units = 1
lto = "off"
opt-level = 0

[profile.release]
lto = true
opt-level = 3
strip = true
