[workspace]
default-members = ["crates/crsh"]
exclude = ["reedline"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ndunnett/crsh"
repository = "https://github.com/ndunnett/crsh"

[workspace.dependencies]
crsh_core = { path = "crates/crsh_core" }
crsh_repl = { path = "crates/crsh_repl" }

clap = { version = "4.5.26", features = ["derive"] }
sysexits = "0.8.5"

[profile.dev]
codegen-units = 1
lto = "off"
opt-level = 0
panic = "abort"

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
strip = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
