[workspace]
default-members = ["crates/crsh"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ndunnett/crsh"
repository = "https://github.com/ndunnett/crsh"

[workspace.dependencies]
lib_core = { path = "crates/lib-core" }
lib_os = { path = "crates/lib-os" }
lib_repl = { path = "crates/lib-repl" }

clap = { version = "4.5.28", features = ["derive"] }
sysexits = "0.8.5"

[profile.dev]
lto = "off"
opt-level = 0
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
