[package]
name = "crsh"
description = "Crappy Rust SHell. Basic shell written in Rust, not meant to actually be used or taken seriously."

publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
lib_core = { workspace = true }
lib_repl = { workspace = true }
sysexits = { workspace = true }
