[package]
name = "crsh_core"

publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
logos = "0.14.0"
os_pipe = "1.2.0"
sysexits = { workspace = true }
