[package]
name = "crsh_prompt"

publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossterm = { workspace = true }
crsh_core = { workspace = true }
strip-ansi-escapes = { workspace = true }
sysexits = { workspace = true }
