[package]
name = "crsh_repl"

publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crsh_core = { workspace = true }
reedline = "0.32.0"
sysexits = { workspace = true }
