[package]
name = "crsh_repl"

publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ansi_term = "0.12"
crsh_core = { workspace = true }
rustyline = { version = "15.0.0", features = ["custom-bindings", "derive"] }
sysexits = { workspace = true }
