[package]
name = "crsh_repl"

publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ansi_term = "0.12"
crossterm = "0.28.1"
ctrlc = "3.4.5"
crsh_core = { workspace = true }
itertools = "0.14.0"
sysexits = { workspace = true }
