[package]
name = "lib_core"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lib_os = { workspace = true }
ariadne = "0.5.0"
clap = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
sysexits = { workspace = true }
