[package]
name = "lib_repl"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ansi-width = "0.1.0"
crossterm = "0.29.0"
ctrlc = "3.4.7"
lib_core = { workspace = true }
itertools = "0.14.0"
sysexits = { workspace = true }
